--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,12 +24,12 @@ jobs:
         run: mvn clean package -DskipTests
 
       - name: Log in to Docker Hub using CLI
-        run: docker login -u Chinmay-A -p ${{ secrets.DOCKER_HUB_TOKEN }}
+        run: docker login -u chinmayamr -p ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: Build Docker Image
         run: |
-          docker build -t sharmarakesh/violetapple-springboot-project:latest .
+          docker build -t chinmayamr/violetapple-springboot-project:latest .
 
       - name: Push Docker Image to Docker Hub
         run: |
-          docker push sharmarakesh/violetapple-springboot-project:latest
+          docker push chinmayamr/violetapple-springboot-project:latest
