--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t chinmayamr/violetapple-springboot-project:latest .
+          docker build -t chinmayamr/test-repo:latest .
 
       - name: Push Docker Image to Docker Hub
         run: |
-          docker push chinmayamr/violetapple-springboot-project:latest
+          docker push chinmayamr/test-repo:latest
